--- a/CSS/style.css
+++ b/CSS/style.css
@@ -99,7 +99,7 @@ font-weight: bold;
 /* my work expirience */
 
 .my-work-expirience-company {
-    color: #FB6D3A;
+    color: #2be068;
 }
 .my-work-expirience-position {
     font-style: normal;
